mtpfs (0.8+svn17-1) unstable; urgency=low

  * New upstream snapshot.
  * Correcting section ("interpreters" -> "utils")
  * Move to debhelper 7.
  * Bump Standards-Version to 3.8.0.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 17 Aug 2008 21:21:33 +0100

mtpfs (0.8+svn11-1) unstable; urgency=low

  * Initial release (Closes: #457236)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 24 Dec 2007 17:27:43 +0000