@@ -4,8 +4,9 @@ mtpfs (0.8+svn17-1) unstable; urgency=low
   * Correcting section ("interpreters" -> "utils")
   * Move to debhelper 7.
   * Bump Standards-Version to 3.8.0.
+  * Rework and rename 'get-orig-source' target.
 
- -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 17 Aug 2008 21:21:33 +0100
+ -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 17 Aug 2008 21:28:01 +0100
 
 mtpfs (0.8+svn11-1) unstable; urgency=low
 
